--- a/guessAboutMe.css
+++ b/guessAboutMe.css
@@ -38,7 +38,16 @@ body {
   }
 
 .alerts {
-  text-align: center;
+    text-align:left;
+}
+
+.correct { width:50px;
+	   height:50px;
+	   vertical-align:middle;
+}
+.incorrect { width:50px;
+	     height:50px;
+	     vertical-align:middle;
 }
 
 #PainfulVideo {
